# Aemeath_Desktop_Pet

./: .editorconfig  .gitignore  AemeathDesktopPet.sln  CHECKLIST.md  Directory.Build.props  README.md  README_CN.md  REQUIREMENTS.md  aemeath_desktop_pet_design.md  comfyui_animation_guide.md  desktop_pet_design.md  run.bat  run.sh
python-backend/: pyproject.toml  requirements.txt
python-backend/aemeath_agent/: __init__.py  config.py  main.py
python-backend/aemeath_agent/agent/: __init__.py  checkpointer.py  graph.py  memory_store.py  prompts.py
python-backend/aemeath_agent/api/: models.py  routes_agent.py  routes_config.py  routes_health.py  routes_rag.py  routes_stt.py  routes_vision.py  sse.py
python-backend/aemeath_agent/bridge/: __init__.py  wpf_client.py
python-backend/aemeath_agent/rag/: __init__.py  ingestion.py  retriever.py  vectorstore.py
python-backend/aemeath_agent/stt/: gemini_provider.py  (+1 more)
python-backend/scripts/: build_exe.py
python-backend/tests/: conftest.py  test_agent_checkpointer.py  test_agent_graph.py  test_agent_memory_store.py  test_bridge.py  test_config.py  test_health.py  test_main_app.py  test_models.py  test_prompts.py  test_rag.py  test_rag_retriever.py  test_rag_vectorstore.py  test_routes_agent.py  test_routes_config.py  test_sse.py  test_stt_providers.py  test_tools.py  test_tools_init.py  test_tools_music_control.py  test_tools_pet_stats.py  test_tools_rag_retrieval.py  test_tools_save_memory.py  test_tools_screen_reader.py  test_tools_weather.py  test_tools_web_search.py  test_vision.py  test_vision_providers.py
(+153 files in other folders)
