[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aemeath-agent"
version = "0.1.0"
description = "Aemeath Desktop Pet - AI Backend Service"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "langchain>=0.3.0",
    "langgraph>=0.4.0",
    "langchain-anthropic>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "langchain-community>=0.3.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "rank-bm25>=0.2.2",
    "sse-starlette>=2.0.0",
    "httpx>=0.27.0",
    "tavily-python>=0.5.0",
    "psutil>=6.0.0",
    "pypdf>=4.0.0",
    "docx2txt>=0.8",
    "pydantic-settings>=2.0.0",
    "langchain-mcp-adapters>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx",
    "ruff>=0.4.0",
]

[project.scripts]
aemeath-agent = "aemeath_agent.main:cli"

[tool.setuptools.packages.find]
include = ["aemeath_agent*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
